# vohliloe

./: Dockerfile  Makefile  hello.py  pyproject.toml  requirements.txt
k8s/: deployment.yaml  ingress.yaml  service.yaml
